...
            android:background="@color/primary"
            android:onClick="onSignInPressed"
            android:text="@string/button_signin_with_password"
            android:textColor="@android:color/white" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_google_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
