...
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parking_description"
                    />
                <EditText
                    android:id="@+id/edit_parking_description"
                    android:layout_marginLeft="24dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
            </LinearLayout>

...
